--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -6,6 +6,11 @@
     <title>Login</title>
 </head>
 <style>
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
     main {
         height: 93dvh;
     }
