--- a/templates/header_off.html
+++ b/templates/header_off.html
@@ -43,7 +43,7 @@ header button:hover {
 </head>
 <body>
     <header>
-        <h1><a href="/quiz/list">QIQuiz</a></h1>
+        <h1><a href="/quiz/init">QIQuiz</a></h1>
         <div id="btlogin">
             <a href="/user/login"><button>Entrar</button></a>
         </div>
