fix bug: filled to parse

--- a/templates/quiz/list.html
+++ b/templates/quiz/list.html
@@ -113,6 +113,9 @@
                     <div class="divbtndel">
                         <button id="btndel"><a href="/api/quiz/{{ quiz.id }}/delete">🗑️</a></button>
                     </div>
+                </div>
+            {% endfor %}
+        </div>
     </main>
 </body>
 </html>
